--- a/wflop-core/pom.xml
+++ b/wflop-core/pom.xml
@@ -27,6 +27,12 @@
             <version>1.0-SNAPSHOT</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.zafer</groupId>
+            <artifactId>wflop-model</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+
         <!-- JUnit 5 for testing -->
         <dependency>
             <groupId>org.junit.jupiter</groupId>
