Add genetic algorithm framework for WFLOP optimization
- Implement `GeneticAlgorithm` class with population-based optimization approach.
- Introduce modular strategies for selection, crossover, and mutation to enable flexibility.
- Add interfaces for `CrossoverStrategy`, `MutationStrategy`, and `SelectionStrategy`.
- Provide default implementations: `SinglePointCrossover`, `RandomReplacementMutation`, and `TournamentSelection`.
- Create `Individual` class for representing potential solutions.
- Add `Metaheuristic` interface and `Solution` abstraction for extensibility.
- Include test cases in `GeneticAlgorithmTest` to validate functionality.
- Update project structure with new Maven modules `wflop-ga` and `wflop-metaheuristic`.

--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,8 @@
         <module>wflop-core</module>
         <module>wflop-model</module>
         <module>wflop-testdata</module>
+        <module>wflop-metaheuristic</module>
+        <module>wflop-ga</module>
     </modules>
 
 </project>
