Add `wflop-api` module with Spring Boot-based REST API

--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
         <module>wflop-testdata</module>
         <module>wflop-metaheuristic</module>
         <module>wflop-ga</module>
+        <module>wflop-api</module>
     </modules>
 
 </project>
