--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
         <module>wflop-metaheuristic</module>
         <module>wflop-ga</module>
         <module>wflop-api</module>
+        <module>wflop-algorithms</module>
     </modules>
 
 </project>
