Whitelist algorithm JSON files in gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,10 @@ build/
 *.xlsx
 *.xls
 
+# Exception: Include algorithm configuration JSON files
+!wflop-algorithms/src/main/resources/**/*.json
+!wflop-algorithms/src/test/resources/**/*.json
+
 # === IntelliJ IDEA ===
 .idea/
 *.iws
