--- a/wflop-algorithms/pom.xml
+++ b/wflop-algorithms/pom.xml
@@ -26,6 +26,26 @@
             <version>1.0-SNAPSHOT</version>
         </dependency>
 
+        <!-- WFLOP Model, Config and Core -->
+        <dependency>
+            <groupId>org.zafer</groupId>
+            <artifactId>wflop-model</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <optional>true</optional>
+        </dependency>
+        <dependency>
+            <groupId>org.zafer</groupId>
+            <artifactId>wflop-config</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <optional>true</optional>
+        </dependency>
+        <dependency>
+            <groupId>org.zafer</groupId>
+            <artifactId>wflop-core</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <optional>true</optional>
+        </dependency>
+
         <!-- Jackson for JSON parsing -->
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
