--- a/wflop-api/pom.xml
+++ b/wflop-api/pom.xml
@@ -35,7 +35,7 @@
         </dependency>
         <dependency>
             <groupId>org.zafer</groupId>
-            <artifactId>wflop-ga</artifactId>
+            <artifactId>wflop-algorithms</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
         <dependency>
