--- a/wflop-benchmark/pom.xml
+++ b/wflop-benchmark/pom.xml
@@ -64,18 +64,34 @@ THE POSSIBILITY OF SUCH DAMAGE.
             <scope>provided</scope>
         </dependency>
 
-        <!-- Use config loader -->
+        <dependency>
+            <groupId>org.zafer</groupId>
+            <artifactId>wflop-algorithms</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+
         <dependency>
             <groupId>org.zafer</groupId>
             <artifactId>wflop-config</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
 
-        <!-- Use calculation methods from wflop-core -->
         <dependency>
             <groupId>org.zafer</groupId>
             <artifactId>wflop-core</artifactId>
             <version>1.0-SNAPSHOT</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.18.1</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-annotations</artifactId>
+            <version>2.18.1</version>
         </dependency>
     </dependencies>
 
