--- a/wflop-api/pom.xml
+++ b/wflop-api/pom.xml
@@ -27,6 +27,13 @@
             <version>2.17.0</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-api</artifactId>
+            <version>5.12.0</version>
+            <scope>test</scope>
+        </dependency>
+
         <!-- Your core logic -->
         <dependency>
             <groupId>org.zafer</groupId>
