--- a/wflop-algorithms/pom.xml
+++ b/wflop-algorithms/pom.xml
@@ -1,7 +1,9 @@
-<?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+         xsi:schemaLocation="
+           http://maven.apache.org/POM/4.0.0
+           http://maven.apache.org/xsd/maven-4.0.0.xsd">
+
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
@@ -12,88 +14,46 @@
 
     <artifactId>wflop-algorithms</artifactId>
 
-    <properties>
-        <maven.compiler.source>17</maven.compiler.source>
-        <maven.compiler.target>17</maven.compiler.target>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    </properties>
-
     <dependencies>
-        <!-- Metaheuristic interface -->
+        <!-- Metaheuristics -->
         <dependency>
             <groupId>org.zafer</groupId>
             <artifactId>wflop-metaheuristic</artifactId>
-            <version>1.0-SNAPSHOT</version>
         </dependency>
 
-        <!-- WFLOP Model, Config and Core -->
+        <!-- Core domain -->
         <dependency>
             <groupId>org.zafer</groupId>
             <artifactId>wflop-model</artifactId>
-            <version>1.0-SNAPSHOT</version>
-            <optional>true</optional>
         </dependency>
+
         <dependency>
             <groupId>org.zafer</groupId>
             <artifactId>wflop-config</artifactId>
-            <version>1.0-SNAPSHOT</version>
-            <optional>true</optional>
         </dependency>
+
         <dependency>
             <groupId>org.zafer</groupId>
             <artifactId>wflop-core</artifactId>
-            <version>1.0-SNAPSHOT</version>
-            <optional>true</optional>
         </dependency>
 
-        <!-- Jackson for JSON parsing -->
+        <!-- Jackson -->
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
-            <version>2.18.1</version>
         </dependency>
+
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-annotations</artifactId>
-            <version>2.18.1</version>
         </dependency>
 
-        <!-- JUnit for testing -->
+        <!-- Testing -->
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter</artifactId>
-            <version>5.10.1</version>
-            <scope>test</scope>
-        </dependency>
-
-        <!-- Mockito for mocking -->
-        <dependency>
-            <groupId>org.mockito</groupId>
-            <artifactId>mockito-core</artifactId>
-            <version>5.11.0</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
 
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.11.0</version>
-                <configuration>
-                    <source>17</source>
-                    <target>17</target>
-                </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-surefire-plugin</artifactId>
-                <version>3.2.3</version>
-            </plugin>
-        </plugins>
-    </build>
-
 </project>
-
-
