--- a/wflop-core/pom.xml
+++ b/wflop-core/pom.xml
@@ -1,7 +1,9 @@
-<?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+         xsi:schemaLocation="
+           http://maven.apache.org/POM/4.0.0
+           http://maven.apache.org/xsd/maven-4.0.0.xsd">
+
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
@@ -13,39 +15,26 @@
     <artifactId>wflop-core</artifactId>
 
     <dependencies>
-        <!-- Use config loader -->
         <dependency>
             <groupId>org.zafer</groupId>
             <artifactId>wflop-config</artifactId>
-            <version>1.0-SNAPSHOT</version>
         </dependency>
 
-        <!-- For using centralized JSON files -->
         <dependency>
             <groupId>org.zafer</groupId>
             <artifactId>wflop-testdata</artifactId>
-            <version>1.0-SNAPSHOT</version>
         </dependency>
 
         <dependency>
             <groupId>org.zafer</groupId>
             <artifactId>wflop-model</artifactId>
-            <version>1.0-SNAPSHOT</version>
         </dependency>
 
-        <!-- JUnit 5 for testing -->
+        <!-- Testing -->
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter</artifactId>
-            <version>5.12.0</version>
             <scope>test</scope>
-        </dependency>
-
-        <!-- Mockito for mocking test objects -->
-        <dependency>
-            <groupId>org.mockito</groupId>
-            <artifactId>mockito-core</artifactId>
-            <version>5.11.0</version> <scope>test</scope>
         </dependency>
     </dependencies>
 
