--- a/wflop-runner/pom.xml
+++ b/wflop-runner/pom.xml
@@ -1,8 +1,11 @@
-<?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+         xsi:schemaLocation="
+           http://maven.apache.org/POM/4.0.0
+           http://maven.apache.org/xsd/maven-4.0.0.xsd">
+
     <modelVersion>4.0.0</modelVersion>
+
     <parent>
         <groupId>org.zafer</groupId>
         <artifactId>wflop</artifactId>
@@ -15,31 +18,27 @@
         <dependency>
             <groupId>org.zafer</groupId>
             <artifactId>wflop-algorithms</artifactId>
-            <version>1.0-SNAPSHOT</version>
         </dependency>
 
         <dependency>
             <groupId>org.zafer</groupId>
             <artifactId>wflop-config</artifactId>
-            <version>1.0-SNAPSHOT</version>
         </dependency>
 
         <dependency>
             <groupId>org.zafer</groupId>
             <artifactId>wflop-model</artifactId>
-            <version>1.0-SNAPSHOT</version>
         </dependency>
 
         <dependency>
             <groupId>org.zafer</groupId>
             <artifactId>wflop-core</artifactId>
-            <version>1.0-SNAPSHOT</version>
         </dependency>
 
         <dependency>
             <groupId>org.zafer</groupId>
             <artifactId>wflop-metaheuristic</artifactId>
-            <version>1.0-SNAPSHOT</version>
         </dependency>
     </dependencies>
+
 </project>
