Add module for conducting experiments

--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,7 @@
         <module>wflop-runner</module>
         <module>wflop-testdata</module>
         <module>wflop-benchmark</module>
+        <module>wflop-experiments</module>
     </modules>
 
     <!-- ========================= -->
